# database-risk-analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: config.json  multi_step_migration.sql  risky_migration.sql  safe_migration.sql  schema.sql
migrate_risk/: __init__.py  analyzer.py  cli.py  models.py  parser.py  report.py  rollout.py  scoring.py
migrate_risk/rules/: __init__.py  common.py  postgres.py
tests/: conftest.py  test_cli.py  test_parser.py  test_postgres_rules.py  test_rollout.py  test_scoring.py
