[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "migrate-risk"
version = "0.1.0"
description = "A Python static analyzer that finds risky PostgreSQL migrations and generates safer rollout plans."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "migrate-risk contributors" }]
keywords = ["postgresql", "database", "migration", "static-analysis", "dba"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]
dependencies = [
    "sqlglot>=25.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
migrate-risk = "migrate_risk.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["migrate_risk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"migrate_risk/report.py" = ["E501"]
"migrate_risk/rules/postgres.py" = ["E501"]
"migrate_risk/parser.py" = ["E501"]
